alignment fix in changelog modal

--- a/appsrc/style/global-styles/_modals.scss
+++ b/appsrc/style/global-styles/_modals.scss
@@ -55,6 +55,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     line-height: 1.6;
 
     ul {
